Revert "Merge pull request #12 from casuallife1334-sketch/feature/families"
This reverts commit 6c790ddfd3496bef4f06572a8b49084fa2e97b0d, reversing
changes made to d8bf67be570acf4323c58ac49efce4f8e750dd9a.
